# bevy-rust-game

./: .editorconfig  Cargo.toml
src/: bullet.rs  main.rs  movement.rs  player.rs
src/game/: bullet.rs  camera.rs  enemy.rs  health.rs  mod.rs  movement.rs  player.rs
