[package]
name = "bevy-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Small debug mode optimization
[profile.dev]
opt-level = 1

# High dependency optimizations
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12.1"
