[package]
name = "bevy-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Small debug mode optimization
[profile.dev]
opt-level = 1

# High dependency optimizations
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy_dev_tools = "0.14.2"
rand = "0.8.5"
